tests/ui/de-union.stderr
error: Unions aren't supported by the Deserr derive macro
 --> tests/ui/de-union.rs:5:1
  |
5 | union Union {
  | ^^^^^
